--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && VITE_COMMIT_HASH=$(git rev-parse --short HEAD) VITE_COMMIT_DATE=$(git log -1 --format=\"%ai\") vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
