--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "devDependencies": {
     "@types/d3": "^7.4.3",
     "@types/three": "^0.177.0",
+    "@types/mathjs": "^9.4.2",
     "navigo": "^8.11.1",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
   },
   "dependencies": {
     "d3": "^7.9.0",
+    "mathjs": "^14.5.2",
     "three": "^0.177.0"
   }
 }
