--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
-    "@types/three": "^0.177.0",
     "@types/mathjs": "^9.4.2",
+    "@types/three": "^0.177.0",
     "navigo": "^8.11.1",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "@cortex-js/compute-engine": "^0.29.1",
     "d3": "^7.9.0",
     "mathjs": "^14.5.2",
+    "mathlive": "^0.105.3",
     "three": "^0.177.0"
   }
 }
